--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 			<source src="opening.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
-		<div class="preload">PLEASE WAIT BABY. GUNAKAN MODE DESKTOP & LANDSCAPE BABY</div>
+		<div class="preload">PLEASE WAIT............</div>
 		
 		<div class="vidcont myoverlay">
 			<div class="divvideo">
@@ -469,18 +469,19 @@
 					<div class="mymax"></div>
 				</div>
 				<div class="myheader" id="mywindowheader">
-					Halo <span id="spannama"></span>
+					Haiiiii <span id="spannama"></span>
 				</div>
 				<div class="mybody">
 					<div class="mytitle">
-						Aku sebenarnya suka sama kamu dari lama.
+						Aku sebenarnya udah suka sama kamu dari lama hehe.....
 					</div>
 					<div class="mycontent">
-						Maukah kau menjadi orang yang selalu ada disisiku, yang selalu ada disaat senang ataupun susah, yang selalu ada sampai akhir hayatku???
+						Hehehe Kamuu mau ga jadi pacarkuu ???????
+						👉👈
 					</div>
 					<div class="mybutton">
-						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >tidak</div>
-						<div class="mybuttonyes" onclick="playVid()">iya</div>
+						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >tidakk</div>
+						<div class="mybuttonyes" onclick="playVid()">iyaa</div>
 					</div>
 				</div>
 				<div class="myresize"></div>
