--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 			<source src="opening.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
-		<div class="preload">PLEASE WAIT............</div>
+		<div class="preload">Tunggu sebentarrr yaaa...</div>
 		
 		<div class="vidcont myoverlay">
 			<div class="divvideo">
@@ -450,11 +450,11 @@
 				</div>
 				<div class="mybody">
 					<div class="mytitle">
-						Isi identitas anda terlebih dahulu
+						Masukkan nama kamu terlebih dahulu
 					</div>
 					<div class="mycontent">
 						Tekan tombol merah untuk reset nama.<br><br>
-						Nama :
+						Nama Kamu :
 						<input class="mytext" type="text" id="mynama" name="nama">
 					</div>
 					<div class="mybutton">
@@ -480,8 +480,8 @@
 						👉👈
 					</div>
 					<div class="mybutton">
-						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >tidakk</div>
-						<div class="mybuttonyes" onclick="playVid()">iyaa</div>
+						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >ga mauu😞</div>
+						<div class="mybuttonyes" onclick="playVid()">mauuu😆</div>
 					</div>
 				</div>
 				<div class="myresize"></div>
