--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
 						👉👈
 					</div>
 					<div class="mybutton">
-						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >ga mauu😞</div>
-						<div class="mybuttonyes" onclick="playVid()">mauuu😆</div>
+						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >gamauu</div>
+						<div class="mybuttonyes" onclick="playVid()">mauuu</div>
 					</div>
 				</div>
 				<div class="myresize"></div>
